@@ -19,7 +19,11 @@ Vcs-Browser: http://git.debian.org/?p=pkg-xorg/lib/libdrm.git
 Package: libdrm-dev
 Section: libdevel
 Architecture: any
-Depends: linux-libc-dev (>= 2.6.28) [linux-any], libdrm2 (= ${binary:Version}), libdrm-intel1 (= ${binary:Version}) [amd64 i386 kfreebsd-amd64 kfreebsd-i386]
+Depends:
+ linux-libc-dev (>= 2.6.28) [linux-any],
+ libdrm2 (= ${binary:Version}),
+ libdrm-intel1 (= ${binary:Version}) [amd64 i386 kfreebsd-amd64 kfreebsd-i386],
+ libdrm-radeon1 (= ${binary:Version}) [linux-any],
 Description: Userspace interface to kernel DRM services -- development files
  This library implements the userspace interface to the kernel DRM
  services.  DRM stands for "Direct Rendering Manager", which is the
@@ -78,4 +82,27 @@ Description: Userspace interface to intel-specific kernel DRM services -- debugg
  Linux to provide hardware-accelerated OpenGL drivers.
  .
  This package provides the debugging symbols for the libdrm-intel1 package.
+
+Package: libdrm-radeon1
+Section: libs
+Architecture: linux-any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Userspace interface to radeon-specific kernel DRM services -- runtime
+ This library implements the userspace interface to the radeon-specific kernel
+ DRM services.  DRM stands for "Direct Rendering Manager", which is the
+ kernelspace portion of the "Direct Rendering Infrastructure" (DRI). The DRI is
+ currently used on Linux to provide hardware-accelerated OpenGL drivers.
+
+Package: libdrm-radeon1-dbg
+Section: debug
+Priority: extra
+Architecture: linux-any
+Depends: libdrm-radeon1 (= ${binary:Version}), ${misc:Depends}
+Description: Userspace interface to radeon-specific kernel DRM services -- debugging symbols
+ This library implements the userspace interface to the kernel DRM services.
+ DRM stands for "Direct Rendering Manager", which is the kernelspace portion
+ of the "Direct Rendering Infrastructure" (DRI). The DRI is currently used on
+ Linux to provide hardware-accelerated OpenGL drivers.
+ .
+ This package provides the debugging symbols for the libdrm-radeon1 package.
 
