@@ -1,0 +1,16 @@
+libdrm_radeon.so.1 libdrm-radeon1 #MINVER#
+ radeon_bo_manager_gem_ctor@Base 2.4.13
+ radeon_bo_manager_gem_dtor@Base 2.4.13
+ radeon_cs_manager_gem_ctor@Base 2.4.13
+ radeon_cs_manager_gem_dtor@Base 2.4.13
+ radeon_cs_space_add_persistent_bo@Base 2.4.13
+ radeon_cs_space_check@Base 2.4.13
+ radeon_cs_space_check_with_bo@Base 2.4.13
+ radeon_cs_space_reset_bos@Base 2.4.13
+ radeon_gem_get_kernel_name@Base 2.4.13
+ radeon_gem_name_bo@Base 2.4.13
+ radeon_gem_set_domain@Base 2.4.13
+ radeon_track_add_event@Base 2.4.13
+ radeon_tracker_add_track@Base 2.4.13
+ radeon_tracker_print@Base 2.4.13
+ radeon_tracker_remove_track@Base 2.4.13
