@@ -24,8 +24,12 @@ else
 endif
 ifeq (linux, $(DEB_HOST_ARCH_OS))
 	confflags += --enable-udev
+	confflags += --enable-radeon-experimental-api
+	RADEON = yes
 else
 	confflags += --disable-udev
+	confflags += --disable-radeon-experimental-api
+	RADEON = no
 endif
 
 # only build libdrm-intel on x86
@@ -61,9 +65,12 @@ obj-$(DEB_BUILD_GNU_TYPE)/config.status: configure
 	dh_testdir
 	test -d obj-$(DEB_BUILD_GNU_TYPE) || mkdir obj-$(DEB_BUILD_GNU_TYPE)
 	cd obj-$(DEB_BUILD_GNU_TYPE) && \
-	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
+	../configure \
+		--prefix=/usr \
+		--mandir=\$${prefix}/share/man \
 		--infodir=\$${prefix}/share/info \
-		--enable-static=yes $(confflags) \
+		--enable-static=yes \
+		$(confflags) \
 		CFLAGS="$(CFLAGS)"
 
 build: build-stamp
@@ -120,12 +127,18 @@ binary-arch: build install
 ifeq ($(INTEL), yes)
 	dh_strip -plibdrm-intel1 --dbg-package=libdrm-intel1-dbg
 endif
+ifeq ($(RADEON), yes)
+	dh_strip -plibdrm-radeon1 --dbg-package=libdrm-radeon1-dbg
+endif
 	dh_strip -s --remaining-packages
 	dh_compress -s
 	dh_fixperms -s
 	dh_makeshlibs -plibdrm2 -V'libdrm2 (>= 2.4.16)' -- -c4
 ifeq ($(INTEL), yes)
 	dh_makeshlibs -plibdrm-intel1 -V'libdrm-intel1 (>= 2.4.16)' -- -c4
+endif
+ifeq ($(RADEON), yes)
+	dh_makeshlibs -plibdrm-radeon1 -V'libdrm-radeon1 (>= 2.4.13)' -- -c4
 endif
 	dh_installdeb -s
 	dh_shlibdeps -s
